--- a/transition_animation/index.html
+++ b/transition_animation/index.html
@@ -21,8 +21,8 @@
     <main>
       <article>
         <div class="article-inner tac">
-          <h2>Manga</h2>
-          <p>Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet</p>
+          <h2 class="title">Manga</h2>
+          <p class="text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet</p>
         </div>
       </article>
     </main>
