--- a/bootstrap_website/index.html
+++ b/bootstrap_website/index.html
@@ -28,9 +28,29 @@
     </div>
   </nav>
 
-  <section class="container-fluid bg-dark text-white py-5 text-center">
-    <h1>Shop in style</h1>
-    <p>With this shop hompeage template</p>
+  <section class="container-fluid bg-dark text-white py-5 text-center mb-5">
+    <h1 class="display-2 fw-bold mt-3 ">Shop in style</h1>
+    <p class="lead mb-4 fw-normal">With this shop hompeage template</p>
+    <div>
+      <button class="btn btn-primary text-uppercase">Read more</button>
+      <button class="btn btn-outline-warning btn-lg">Do something</button>
+    </div>
+  </section>
+
+  <section>
+    <div class="container">
+      <!-- one card -->
+      <div class="card">
+        <img src="https://picsum.photos/id/20/300/200" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-success">Go somewhere</a>
+        </div>
+      </div><!-- /one card -->
+
+    </div>
   </section>
 
 
