--- a/bootstrap_website/index.html
+++ b/bootstrap_website/index.html
@@ -38,9 +38,29 @@
   </section>
 
   <section>
-    <div class="container">
+    <div class="container d-sm-flex gap-3">
       <!-- one card -->
-      <div class="card">
+      <div class="card mb-4 mb-sm-0">
+        <img src="https://picsum.photos/id/20/300/200" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-success">Go somewhere</a>
+        </div>
+      </div><!-- /one card -->
+      <!-- one card -->
+      <div class="card mb-4 mb-sm-0">
+        <img src="https://picsum.photos/id/20/300/200" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+          <a href="#" class="btn btn-success">Go somewhere</a>
+        </div>
+      </div><!-- /one card -->
+      <!-- one card -->
+      <div class="card mb-4 mb-sm-0">
         <img src="https://picsum.photos/id/20/300/200" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Card title</h5>
