--- a/bootstrap_website/bs-grid.html
+++ b/bootstrap_website/bs-grid.html
@@ -18,18 +18,20 @@
     <header class="bg-primary p-4 text-white">
       <h2>Header</h2>
     </header>
+    <div class="row gx-5 gy-0">
 
-    <nav class="bg-success p-4">
-      <h2>Nav</h2>
-      <ul class="list-group list-group-horizontal-md">
-        <li class="list-group-item">Home</li>
-        <li class="list-group-item">About</li>
-        <li class="list-group-item">Contact</li>
-      </ul>
-    </nav>
+      <div class="col-12 col-lg-3">
+        <nav class="bg-success p-4 h-100">
+          <h2>Nav</h2>
+          <ul class="list-group">
+            <li class="list-group-item">Home</li>
+            <li class="list-group-item">About</li>
+            <li class="list-group-item">Contact</li>
+          </ul>
+        </nav>
+      </div>
 
-    <div class="row">
-      <div class="col-sm-6 col-md-8">
+      <div class="col-sm-6 col-md-8 col-lg-6">
         <main class="bg-info p-4 h-100">
           <h2 class="display-3">StrapBoot works</h2>
           <p class="">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste autem commodi dolorum ad iusto,
@@ -38,7 +40,7 @@
           </p>
         </main>
       </div>
-      <div class="col-sm-6 col-md-4">
+      <div class="col-sm-6 col-md-4 col-lg-3">
         <aside class="bg-danger-subtle p-4 h-100">
           <h3>Aside</h3>
           <form>
@@ -60,6 +62,7 @@
       Viskas saugoma <span class="lead">&lt;2023&gt;</span> &copy;
     </footer>
   </section>
+
 
 
 
