--- a/bootstrap_website/bs-grid.html
+++ b/bootstrap_website/bs-grid.html
@@ -10,6 +10,12 @@
 </head>
 
 <body class="container">
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    Tau pavyko !~~~~!!
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+
+
   <h1 class="display-2">BS has Grid</h1>
   <p class="lead">But its not CSS grid.....</p>
 
